--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -19,6 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\Components\Image.cpp" />
+    <ClCompile Include="..\src\ecs\Manager.cpp" />
+    <ClCompile Include="..\src\game\Game.cpp" />
     <ClCompile Include="..\SRC\json\JSON.cpp" />
     <ClCompile Include="..\SRC\json\JSONValue.cpp" />
     <ClCompile Include="..\SRC\json\json_demo.cpp" />
@@ -33,6 +36,110 @@
     <ClCompile Include="..\SRC\utils\Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\begin_code.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\close_code.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_assert.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_atomic.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_audio.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_bits.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_blendmode.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_clipboard.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_android.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_emscripten.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_iphoneos.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_macosx.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_minimal.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_ngage.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_os2.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_pandora.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_windows.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_wingdk.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_winrt.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_config_xbox.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_copying.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_cpuinfo.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_egl.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_endian.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_error.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_events.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_filesystem.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_gamecontroller.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_gesture.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_guid.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_haptic.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_hidapi.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_hints.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_joystick.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_keyboard.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_keycode.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_loadso.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_locale.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_log.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_main.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_messagebox.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_metal.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_misc.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_mouse.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_mutex.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_name.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengl.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles2.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles2_gl2.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles2_gl2ext.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles2_gl2platform.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengles2_khrplatform.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_opengl_glext.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_pixels.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_platform.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_power.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_quit.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_rect.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_render.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_revision.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_rwops.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_scancode.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_sensor.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_shape.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_stdinc.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_surface.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_system.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_syswm.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_assert.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_common.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_compare.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_crc32.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_font.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_fuzzer.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_harness.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_images.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_log.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_md5.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_memory.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_test_random.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_thread.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_timer.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_touch.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_types.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_version.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_video.h" />
+    <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_vulkan.h" />
+    <ClInclude Include="..\lib\SDL2_image-2.8.4\include\SDL_image.h" />
+    <ClInclude Include="..\lib\SDL2_mixer-2.8.0\include\SDL_mixer.h" />
+    <ClInclude Include="..\lib\SDL2_net-2.2.0\include\SDL_net.h" />
+    <ClInclude Include="..\lib\SDL2_ttf-2.24.0\include\SDL_ttf.h" />
+    <ClInclude Include="..\src\Components\Image.h" />
+    <ClInclude Include="..\src\Components\Transform.h" />
+    <ClInclude Include="..\src\ecs\Component.h" />
+    <ClInclude Include="..\src\ecs\ecs.h" />
+    <ClInclude Include="..\src\ecs\ecs_defs_example.h" />
+    <ClInclude Include="..\src\ecs\Entity.h" />
+    <ClInclude Include="..\src\ecs\Manager.h" />
+    <ClInclude Include="..\src\game\ecs_defs.h" />
+    <ClInclude Include="..\src\game\Game.h" />
     <ClInclude Include="..\SRC\json\JSON.h" />
     <ClInclude Include="..\SRC\json\JSONValue.h" />
     <ClInclude Include="..\SRC\json\json_demo.h" />
@@ -55,6 +162,9 @@
     <ClInclude Include="..\SRC\utils\ptr_iterator.h" />
     <ClInclude Include="..\SRC\utils\Singleton.h" />
     <ClInclude Include="..\SRC\utils\Vector2D.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\src\ecs\RAEDME.md" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
