TriggerComponent created and functional

--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="..\src\Components\Image.cpp" />
     <ClCompile Include="..\src\Components\MouseIntaractionComponent.cpp" />
     <ClCompile Include="..\src\Components\RectArea2D.cpp" />
+    <ClCompile Include="..\src\Components\TriggerComponent.cpp" />
     <ClCompile Include="..\src\ecs\Manager.cpp" />
     <ClCompile Include="..\src\game\Game.cpp" />
     <ClCompile Include="..\SRC\json\JSON.cpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="..\src\Components\MouseIntaractionComponent.h" />
     <ClInclude Include="..\src\Components\RectArea2D.h" />
     <ClInclude Include="..\src\Components\Transform.h" />
+    <ClInclude Include="..\src\Components\TriggerComponent.h" />
     <ClInclude Include="..\src\ecs\Component.h" />
     <ClInclude Include="..\src\ecs\ecs.h" />
     <ClInclude Include="..\src\ecs\ecs_defs_example.h" />
