--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="..\src\Components\CircleArea2D.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Components\TriggerComponent.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\SRC\json\JSON.h">
@@ -498,6 +501,9 @@
       <Filter>Components</Filter>
     </ClInclude>
     <ClInclude Include="..\src\Components\CircleArea2D.h">
+      <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Components\TriggerComponent.h">
       <Filter>Components</Filter>
     </ClInclude>
   </ItemGroup>
