--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="..\src\Components\ClickComponent.cpp" />
     <ClCompile Include="..\src\Components\DragComponent.cpp" />
     <ClCompile Include="..\src\Components\Image.cpp" />
+    <ClCompile Include="..\src\Components\LogComponent.cpp" />
     <ClCompile Include="..\src\Components\MouseIntaractionComponent.cpp" />
     <ClCompile Include="..\src\Components\RectArea2D.cpp" />
     <ClCompile Include="..\src\Components\TriggerComponent.cpp" />
@@ -41,7 +42,6 @@
     <ClCompile Include="..\SRC\utils\Collisions.cpp" />
     <ClCompile Include="..\SRC\utils\Vector2D.cpp" />
     <ClCompile Include="DebugLogRoom.cpp" />
-    <ClCompile Include="Log.cpp" />
     <ClCompile Include="Room1.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="ScenePuzzleTemplate.cpp" />
@@ -149,6 +149,7 @@
     <ClInclude Include="..\src\Components\ClickComponent.h" />
     <ClInclude Include="..\src\Components\DragComponent.h" />
     <ClInclude Include="..\src\Components\Image.h" />
+    <ClInclude Include="..\src\Components\LogComponent.h" />
     <ClInclude Include="..\src\Components\MouseIntaractionComponent.h" />
     <ClInclude Include="..\src\Components\RectArea2D.h" />
     <ClInclude Include="..\src\Components\Transform.h" />
@@ -183,7 +184,6 @@
     <ClInclude Include="..\SRC\utils\Singleton.h" />
     <ClInclude Include="..\SRC\utils\Vector2D.h" />
     <ClInclude Include="DebugLogRoom.h" />
-    <ClInclude Include="Log.h" />
     <ClInclude Include="Room1.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="ScenePuzzleTemplate.h" />
