Comienzo de la implementación de la lectura de archivo
- Se ha incorpordado la librería json.hpp
- Se ha empezad con la lectura del Json
- Se ha implementado en el Game el DialogueManager
ERROR:
- No pillo la forma de hacer que lea el personaje y el texto por separado

--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="..\src\game\ecs_defs.h" />
     <ClInclude Include="..\src\game\Game.h" />
     <ClInclude Include="..\SRC\json\JSON.h" />
+    <ClInclude Include="..\src\json\json.hpp" />
     <ClInclude Include="..\SRC\json\JSONValue.h" />
     <ClInclude Include="..\SRC\json\json_demo.h" />
     <ClInclude Include="..\SRC\sdlutils\Font.h" />
