--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj.filters
@@ -87,9 +87,6 @@
     <ClCompile Include="SceneManager.cpp">
       <Filter>Manager</Filter>
     </ClCompile>
-    <ClCompile Include="InitialScene.cpp">
-      <Filter>Manager</Filter>
-    </ClCompile>
     <ClCompile Include="Room1.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
@@ -123,8 +120,14 @@
     <ClCompile Include="..\SRC\utils\Vector2D.cpp">
       <Filter>Resource Files\SDL</Filter>
     </ClCompile>
-    <ClCompile Include="Inventory.cpp">
-      <Filter>Resource Files\SDL\Inventory</Filter>
+    <ClCompile Include="..\src\Components\WriteTextComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="InitialScene.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="DialogTestScene.cpp">
+      <Filter>Scenes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -198,9 +201,6 @@
       <Filter>Scenes</Filter>
     </ClInclude>
     <ClInclude Include="SceneTemplate.h">
-      <Filter>Scenes</Filter>
-    </ClInclude>
-    <ClInclude Include="InitialScene.h">
       <Filter>Scenes</Filter>
     </ClInclude>
     <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL.h">
@@ -482,12 +482,6 @@
     <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL_vulkan.h">
       <Filter>Resource Files\SDL</Filter>
     </ClInclude>
-    <ClInclude Include="HintTemplate.h">
-      <Filter>Resource Files\SDL\Inventory</Filter>
-    </ClInclude>
-    <ClInclude Include="Inventory.h">
-      <Filter>Resource Files\SDL\Inventory</Filter>
-    </ClInclude>
     <ClInclude Include="..\SRC\sdlutils\SDLNetUtils.h">
       <Filter>Resource Files\SDL</Filter>
     </ClInclude>
@@ -499,9 +493,6 @@
     </ClInclude>
     <ClInclude Include="..\SRC\sdlutils\SDLUtilsError.h">
       <Filter>Resource Files\SDL</Filter>
-    </ClInclude>
-    <ClInclude Include="checkML.h">
-      <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="..\SRC\utils\Collisions.h">
       <Filter>Misc</Filter>
@@ -556,6 +547,21 @@
     </ClInclude>
     <ClInclude Include="..\SRC\sdlutils\VirtualTimer.h">
       <Filter>Misc</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Components\WriteTextComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\json\json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DialogTestScene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TextoInfo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InitialScene.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
