--- a/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
+++ b/TheatrumMundiProyect/TheatrumMundi/TheatrumMundi.vcxproj
@@ -55,6 +55,12 @@
     <ClCompile Include="SceneTemplate.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\al.h" />
+    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\alc.h" />
+    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\efx-creative.h" />
+    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\EFX-Util.h" />
+    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\efx.h" />
+    <ClInclude Include="..\lib\OpenAL 1.1 SDK\include\xram.h" />
     <ClInclude Include="..\lib\SDL2-2.30.11\include\begin_code.h" />
     <ClInclude Include="..\lib\SDL2-2.30.11\include\close_code.h" />
     <ClInclude Include="..\lib\SDL2-2.30.11\include\SDL.h" />
